--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.1",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "less-loader": "^12.2.0",
     "markdown-it": "^14.1.0",
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-skycon": "^1.1.0",
+    "vue-skycons": "^4.3.4",
+    "vue-typer": "^1.2.0",
+    "vue3typed": "^0.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,8 +27,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "eslintConfig": {
     "root": true,
