--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "^4.2.1",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "element-plus": "^2.7.4",
     "less-loader": "^12.2.0",
     "markdown-it": "^14.1.0",
     "uuid": "^9.0.1",
